--- a/main.css
+++ b/main.css
@@ -5,87 +5,80 @@
 }
 
 body {
-    margin: 50px;
     font-family: 'Source Sans Pro', sans-serif;
+    background-image: 
+    linear-gradient(
+        rgba(0, 0, 0, 0.5),
+        rgba(0, 0, 0, 0.5)
+      ), url('image.jpg');
+    background-size: cover;
 }
 
 header {
-    font-size: 20px;
-}
-
-header::before,
-header::after {
-    display: table;
-    content: '';
-}
-header::after {
-    clear: both;
-}
-
-ul {
-    float: right;
-    list-style-type: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 25px;
+    margin-bottom: 100px;
 }
 
 ul li {
     display: inline;
-    font-size: 25px;
-    text-align: center;
+    text-transform: uppercase;
+    color: white;
+    font-weight: bold;
+    letter-spacing: 0.3px;
+}
+
+ul li:first-child {
     margin-right: 25px;
 }
 
-#main {
-    margin-top: 100px;
-}
-
-form {
-    width: 40%;
-    margin: 0 auto;
-}
-
-button {
-    font-weight: bold;
-    display: block;
-    width: auto;
-    margin: 50px auto;
-    padding: 20px;
-    background-color: white;
-    color: black;
-    border: 2px solid black;
-    border-radius: 3px;
-    font-size: 18px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-
-button:hover {
-    background-color: black;
+h1 {
     color: white;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 100px;
 }
 
-h1 { 
-    text-align: center;
+#main {
+    display: flex;
+    justify-content: center;
+    margin: 20px;
 }
 
 h2 {
+    text-align: left;
     margin-bottom: 20px;
-}
-
-label {
-    display: block;
-    padding: 20px;
-    margin-bottom: 10px;
-    line-height: 20px;
-    border: 2px solid black;
-    border-radius: 3px;
-    transition: all 0.3s ease-out;
-}
-
-label span {
-    font-weight: bold;
+    color: white;
+    font-size: 18px;
+    letter-spacing: 0.3px;
 }
 
 input[type="radio"] {
     margin-right: 10px;
-    
+}
+
+label {
+    display: block;
+    color: white;
+    margin-bottom: 10px;
+}
+
+button {
+    display: block;
+    width: auto;
+    margin: 40px auto;
+    border: none;
+    padding: 20px;
+    font-size: 18px;
+    text-transform: uppercase;
+    transition: all 0.3s ease;
+    cursor: pointer;
+    background-color: #38A9AF;
+    color: white;
+}
+
+button:hover {
+    background-color: #363946;
 }
